# DynamicHooks

./: .gitignore  build-windows-vs2010-x86-rel.bat  run_tests.py
src/: CMakeLists.txt  DynamicHooks.cbp  Makefile  cmake_install.cmake  convention.h  hook.cpp  hook.h
tests/: CMakeLists.txt  ms_thiscall2.cpp
